Update RecipeCLI.java